# defenseclaw

./: .gitignore  .goreleaser.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SKILL.md  USER.md  go.mod  go.sum  o11y.md  pyproject.toml
.github/workflows/: ci.yaml  e2e-spark.yaml
cli/: pyproject.toml
cli/defenseclaw/: codeguard_skill.py  config.py  guardrail.py
cli/defenseclaw/commands/: cmd_doctor.py  cmd_init.py  cmd_setup.py  cmd_skill.py
cli/defenseclaw/scanner/: skill.py
cli/tests/: test_cmd_init.py  test_cmd_misc.py  test_config.py  test_guardrail.py
cmd/defenseclaw/: main.go
docs/: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  PLUGINS.md  QUICKSTART.md  README.md  TESTING.md  TODO_CLI.md  TUI.md
extensions/defenseclaw/: package.json
guardrails/: defenseclaw_guardrail.py
internal/audit/: export.go  logger.go  store.go
internal/cli/: alerts.go  allow.go  audit.go  block.go  daemon.go  deploy.go  init.go  list.go  quarantine.go  rescan.go  root.go  scan.go  sidecar.go  skill.go  status.go  tui.go
internal/config/: actions.go  config.go  config_test.go  defaults.go
internal/daemon/: daemon.go  proc_unix.go
internal/enforce/: mcp_enforcer.go  policy.go  sandbox.go  skill_enforcer.go
internal/gateway/: api.go  client.go  frames.go  gateway_test.go  gateway_ws_test.go  inspect.go  rpc.go  (+4 more)
plugins/: plugin.go  registry.go
policies/: default.yaml  permissive.yaml  strict.yaml
schemas/: audit-event.json  scan-result.json
scripts/: install-dev.sh  install.sh  setup-scanners.sh  start.sh  test-e2e-mac.sh  test-e2e-spark.sh  test-litellm-proxy.py
(+37 files in other folders)
